--- a/templates/admin/habits.html
+++ b/templates/admin/habits.html
@@ -56,6 +56,7 @@
                               method="POST" 
                               class="inline"
                               onsubmit="return confirm('Are you sure you want to delete this habit?');">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                             <button type="submit" class="text-red-600 hover:text-red-900">Delete</button>
                         </form>
                     </td>
