--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
             </p>
         </div>
         <form class="mt-8 space-y-6" action="{{ url_for('login') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <div class="rounded-md shadow-sm -space-y-px">
                 <div>
                     <label for="email" class="sr-only">Email address</label>
